tests/compile/chunk_dollar_non_ident.rs
use mlua::chunk;
fn main() {
    let _ = chunk! { $42 };
}
